--- a/engines/echosoar/Dockerfile
+++ b/engines/echosoar/Dockerfile
@@ -10,9 +10,9 @@ ARG REV=master
 WORKDIR /src
 RUN git clone "$REPO" . && git checkout "$REV"
 
-COPY engines/echosoar-jsi/main.rs src/main.rs
+COPY engines/echosoar/main.rs src/main.rs
 
 RUN cargo build --release
 
 COPY build/dist.py ./
-RUN ./dist.py /dist/echosoar-jsi --binary=/src/target/release/jsi --license=readme.md
+RUN ./dist.py /dist/echosoar --binary=/src/target/release/jsi --license=readme.md
