--- a/engines/Makefile
+++ b/engines/Makefile
@@ -1,42 +1,55 @@
 # SPDX-FileCopyrightText: 2026 Ivan Krasilnikov
 # SPDX-License-Identifier: MIT
 
+SHELL := /bin/bash
+
 SUBDIRS := $(sort $(patsubst %/,%,$(dir $(wildcard */Makefile))))
 
-.PHONY: $(SUBDIRS) all all-ignoring-errors dist conformance base sh
+# Space/comma-separated list of subdirs to skip; or set SKIP=errors to continue after failures.
+SKIP ?=
+comma := ,
+SUBDIRS := $(filter-out $(strip $(subst $(comma), ,$(SKIP))),$(SUBDIRS))
 
-all: $(SUBDIRS)
+.PHONY: $(SUBDIRS) all dist conformance base sh
 
-all-ignoring-errors:
-	-for e in $(SUBDIRS); do $(MAKE) -C "$$e" all || true; done
+define make_subdirs
+	@failed=""; \
+	for e in $(SUBDIRS); do \
+	  if [ "$(1)" != "all" ] && ! $(MAKE) -C $$e -n $(1) >/dev/null 2>&1; then \
+	    echo "$$e: skipping (no $(1) target)"; \
+	    continue; \
+	  fi; \
+	  $(MAKE) -C $$e $(1) || { \
+	    rc=$$?; \
+	    if [ "$(SKIP)" = "errors" ]; then \
+	      failed+=" $$e"; \
+	    else \
+	      exit $$rc; \
+	    fi; \
+	  }; \
+	done; \
+	if [ -z "$$failed" ]; then \
+	  echo "All OK"; \
+	else \
+	  echo "Failed:$$failed"; \
+	fi
+endef
+
+all:
+	$(call make_subdirs,all)
 
 dist:
-	@for e in $(SUBDIRS); do \
-	  if $(MAKE) -C "$$e" -n dist >/dev/null 2>&1; then \
-	    $(MAKE) -C "$$e" dist || exit $$?; \
-	  else \
-	    echo "$$e: skipping (no dist target)"; \
-	  fi; \
-	done
+	$(call make_subdirs,dist)
 
 conformance:
-	@for e in $(SUBDIRS); do \
-	  if $(MAKE) -C "$$e" -n conformance >/dev/null 2>&1; then \
-	    $(MAKE) -C "$$e" conformance || exit $$?; \
-	  else \
-	    echo "$$e: skipping (no conformance target)"; \
-	  fi; \
-	done
-
-base:
-	$(MAKE) -C ../build all
+	$(call make_subdirs,conformance)
 
 sh:
 	$(MAKE) -C ../build sh
 
 define subdir_targets
 $(1):
-	$(MAKE) -C "$(1)" all
+	$(MAKE) -C $(1) all
 endef
 
 $(foreach d,$(SUBDIRS),$(eval $(call subdir_targets,$(d))))
