--- a/engines/jispy/Dockerfile
+++ b/engines/jispy/Dockerfile
@@ -15,8 +15,7 @@ COPY engines/jispy/jispy.patch ./
 
 RUN git apply jispy.patch && python ./tests.py && \
     mkdir -p /dist/jispy-dist && \
-    cp -a jispy.py *.js /dist/jispy-dist && \
-    ln -s jispy-dist/jispy.py /dist/jispy
+    cp -a jispy.py *.js /dist/jispy-dist
 
 COPY build/dist.py ./
-RUN ./dist.py /dist/jispy console_log=console.log
+RUN ./dist.py /dist/jispy --wrapper='exec "$SCRIPT_DIR/jispy-dist/jispy.py" "$@"' console_log=console.log
