--- a/engines/libjs/Dockerfile
+++ b/engines/libjs/Dockerfile
@@ -22,7 +22,7 @@ RUN git fetch --depth=1 origin "$REV" && git checkout -f FETCH_HEAD
 # Truncate vcpkg dependencies to a minimal necessary set for LibJS build
 # If running into cmake errors, add missing components here from
 # https://github.com/LadybirdBrowser/ladybird/blob/master/vcpkg.json
-RUN sed -i '/"dependencies":/,/^  ],$/c "dependencies": ["fast-float", "icu", "libtommath", "libxml2", "openssl", "simdjson", "simdutf", "sqlite3", "zlib"],' vcpkg.json
+RUN sed -i '/"dependencies":/,/^  ],$/c "dependencies": ["fast-float", "fmt", "icu", "libtommath", "libxml2", "openssl", "simdjson", "simdutf", "sqlite3", "zlib"],' vcpkg.json
 
 RUN cmake -B build -G Ninja --preset=Release \
       -DCMAKE_C_COMPILER=$CC \
