--- a/engines/tiny-js/Dockerfile
+++ b/engines/tiny-js/Dockerfile
@@ -10,13 +10,7 @@ ARG REV=master
 WORKDIR /src
 RUN git clone "$REPO" . && git checkout "$REV"
 
-COPY engines/tiny-js/tiny-js.patch ./
-
-# Add file script runner snippet and stop REPL on EOF
-# Raise loop iter limit
-# Optimized build
-RUN git apply tiny-js.patch && \
-    sed -i 's/\(TINYJS_LOOP_MAX_ITERATIONS\) = 8192;/\1 = 1000000000;/' TinyJS.h && \
+RUN sed -i 's/\(TINYJS_LOOP_MAX_ITERATIONS\) = 8192;/\1 = 1000000000;/' TinyJS.h && \
     sed -i 's/CFLAGS=-c .*/CFLAGS=-c -O3/' Makefile && \
     make
 
