--- a/engines/tiny-js/Makefile
+++ b/engines/tiny-js/Makefile
@@ -3,4 +3,6 @@
 
 include ../../build/build.mk
 
+REV ?= 821447737f3d2f79139cef97be16f4513dd75099
+
 $(eval $(call build_engine,tiny-js,Dockerfile))
