--- a/engines/v8/Makefile
+++ b/engines/v8/Makefile
@@ -10,7 +10,7 @@ REV_PGO ?= 146.0.7680.16
 CONFORMANCE_BINARY = v8_intl
 
 $(eval $(call build_engine,v8,Dockerfile))
-$(eval $(call build_engine,v8_gcc,v8_gcc.Dockerfile,--build-arg BASE=jsz-gcc))
 $(eval $(call build_engine,v8_intl,Dockerfile,--build-arg INTL=true --build-arg REV=lkgr))
 $(eval $(call build_engine,v8_jitless,Dockerfile,--build-arg JITLESS=true))
 $(eval $(call build_engine,v8_pgo,v8_pgo.Dockerfile,--build-arg REV=$(REV_PGO)))
+#$(eval $(call build_engine,v8_gcc,v8_gcc.Dockerfile))  -- often broken
