Use /usr/lib/wine/wine64 in wine-based wrappers
Needed for Apple's containerization default kernel.

--- a/engines/wine/Dockerfile
+++ b/engines/wine/Dockerfile
@@ -50,5 +50,5 @@ RUN x86_64-w64-mingw32-g++ -o /dist/wine-dist/jscript64.exe -Wall -Os -s -fno-rt
 COPY build/dist.py ./
 RUN ./dist.py /dist/wine \
       --dist_files=/dist/wine-dist/jscript64.dll \
-      --wrapper='export WINEDEBUG="${WINEDEBUG:--all,+err}" LD_PRELOAD= XDG_RUNTIME_DIR="${XDG_RUNTIME_DIR:-/tmp}"; exec wine "$SCRIPT_DIR/wine-dist/jscript64.exe" --dll "$SCRIPT_DIR/wine-dist/jscript64.dll" "$@"' \
+      --wrapper='export WINEDEBUG="${WINEDEBUG:--all,+err}" LD_PRELOAD= XDG_RUNTIME_DIR="${XDG_RUNTIME_DIR:-/tmp}"; if [[ -x /usr/lib/wine/wine64 ]]; then WINE=/usr/lib/wine/wine64; fi; exec "${WINE:-wine}" "$SCRIPT_DIR/wine-dist/jscript64.exe" --dll "$SCRIPT_DIR/wine-dist/jscript64.dll" "$@"' \
       console_log=console.log
