--- a/engines/v8/Makefile
+++ b/engines/v8/Makefile
@@ -12,5 +12,5 @@ CONFORMANCE_BINARY = v8_intl
 $(eval $(call build_engine,v8,Dockerfile))
 $(eval $(call build_engine,v8_intl,Dockerfile,--build-arg INTL=true --build-arg REV=lkgr))
 $(eval $(call build_engine,v8_jitless,Dockerfile,--build-arg JITLESS=true))
-$(eval $(call build_engine,v8_pgo,v8_pgo.Dockerfile,--build-arg REV=$(REV_PGO)))
 #$(eval $(call build_engine,v8_gcc,v8_gcc.Dockerfile))  -- often broken
+#$(eval $(call build_engine,v8_pgo,v8_pgo.Dockerfile,--build-arg REV=$(REV_PGO)))  -- needs too much disk space
