--- a/engines/rhino/Dockerfile
+++ b/engines/rhino/Dockerfile
@@ -1,7 +1,8 @@
 # SPDX-FileCopyrightText: 2025 Ivan Krasilnikov
 # SPDX-License-Identifier: MIT
 
-ARG BASE=jsz-debian
+# Note: build fails with JDK 25
+ARG BASE=jsz-jdk21
 FROM $BASE
 
 ARG REPO=https://github.com/mozilla/rhino.git
@@ -10,9 +11,6 @@ ARG REV=master
 WORKDIR /src
 RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
     (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
-
-# Build fails with JDK 25
-RUN apt-get install -y --no-install-recommends openjdk-21-jdk-headless
 
 RUN ./gradlew :rhino-all:build
 
