--- a/engines/yaji/Dockerfile
+++ b/engines/yaji/Dockerfile
@@ -1,11 +1,8 @@
 # SPDX-FileCopyrightText: 2026 Ivan Krasilnikov
 # SPDX-License-Identifier: MIT
 
-ARG BASE=jsz-debian
+ARG BASE=jsz-jdk25
 FROM $BASE
-
-RUN apt-get update -y && \
-    apt-get install -y --no-install-recommends openjdk-21-jdk-headless ant ant-optional
 
 ARG REPO=https://github.com/neades/yaji-ecmascript-interpreter.git
 ARG REV=master
