make -C engines list

--- a/engines/Makefile
+++ b/engines/Makefile
@@ -10,29 +10,15 @@ SKIP ?=
 comma := ,
 SUBDIRS := $(filter-out $(strip $(subst $(comma), ,$(SKIP))),$(SUBDIRS))
 
-.PHONY: $(SUBDIRS) all dist rev conformance base sh
-
 define make_subdirs
 	@failed=""; \
 	for e in $(SUBDIRS); do \
-	  if [ "$(1)" != "all" ] && ! $(MAKE) -C $$e -n $(1) >/dev/null 2>&1; then \
-	    echo "$$e: skipping (no $(1) target)"; \
-	    continue; \
+	  if ! $(MAKE) -C $$e -n $(1) >/dev/null 2>&1; then continue; fi; \
+	  if ! $(MAKE) -C $$e $(1); then \
+	    if [ "$(SKIP)" = "errors" ]; then failed+=" $$e"; else exit 1; fi; \
 	  fi; \
-	  $(MAKE) -C $$e $(1) || { \
-	    rc=$$?; \
-	    if [ "$(SKIP)" = "errors" ]; then \
-	      failed+=" $$e"; \
-	    else \
-	      exit $$rc; \
-	    fi; \
-	  }; \
 	done; \
-	if [ -z "$$failed" ]; then \
-	  echo "All OK"; \
-	else \
-	  echo "Failed:$$failed"; \
-	fi
+	if [ -z "$$failed" ]; then echo "All OK"; else echo "Failed:$$failed"; fi;
 endef
 
 all:
@@ -47,6 +33,12 @@ rev:
 conformance:
 	$(call make_subdirs,conformance)
 
+# List buildable engines for current DOCKER_ARCH (based on the presence of dist target)
+list:
+	@for e in $(SUBDIRS); do \
+	  if $(MAKE) -C $$e -n dist >/dev/null 2>&1; then echo $$e; fi; \
+	done
+
 sh:
 	$(MAKE) -C ../build sh
 
@@ -56,3 +48,5 @@ $(1):
 endef
 
 $(foreach d,$(SUBDIRS),$(eval $(call subdir_targets,$(d))))
+
+.PHONY: $(SUBDIRS) all dist rev conformance list sh
