Drop most of pinned revisions
Just use latest dev revision for (bi)weekly rebuilds.

--- a/engines/hermes-v1/Makefile
+++ b/engines/hermes-v1/Makefile
@@ -3,8 +3,7 @@
 
 include ../../build/build.mk
 
-REV ?= hermes-v250829098.0.7
-
+REV ?= static_h
 CONFORMANCE_BINARY = hermes-v1_intl
 
 $(eval $(call build_engine,hermes-v1,../hermes/Dockerfile))
