--- a/engines/hermes/Makefile
+++ b/engines/hermes/Makefile
@@ -3,7 +3,7 @@
 
 include ../../build/build.mk
 
-REV ?= hermes-v0.15.1
+REV ?= main
 
 $(eval $(call build_engine,hermes,Dockerfile))
 $(eval $(call build_engine,hermes_clang,Dockerfile,--build-arg BASE=jsz-clang))
