--- a/engines/chakracore/Makefile
+++ b/engines/chakracore/Makefile
@@ -8,9 +8,9 @@ CONFORMANCE_BINARY = chakracore_intl
 # JIT is only supported on amd64
 ifeq ($(DOCKER_ARCH),amd64)
 $(eval $(call build_engine,chakracore,Dockerfile))
-$(eval $(call build_engine,chakracore_intl,Dockerfile,--build-arg INTL=true --build-arg JITLESS=true --build-arg BASE=jsz-clang20))
+$(eval $(call build_engine,chakracore_intl,Dockerfile,--build-arg INTL=true --build-arg JITLESS=true))
 $(eval $(call build_engine,chakracore_jitless,Dockerfile,--build-arg JITLESS=true))
 else
 $(eval $(call build_engine,chakracore,Dockerfile,--build-arg JITLESS=true))
-$(eval $(call build_engine,chakracore_intl,Dockerfile,--build-arg INTL=true --build-arg JITLESS=true --build-arg BASE=jsz-clang20 --build-arg JITLESS=true))
+$(eval $(call build_engine,chakracore_intl,Dockerfile,--build-arg INTL=true --build-arg JITLESS=true --build-arg JITLESS=true))
 endif
