--- a/engines/dscriptcpp/Makefile
+++ b/engines/dscriptcpp/Makefile
@@ -3,9 +3,7 @@
 
 include ../../build/build.mk
 
-ifeq ($(DOCKER_ARCH),amd64)
+# Non-portable 32-bit x86 code
+SUPPORTED_ARCHS = amd64 386
+
 $(eval $(call build_engine,dscriptcpp,Dockerfile))
-else
-all:
-	@echo "dscriptcpp: skipping, amd64 build only due to non-portable 32-bit x86 code - build with 'DOCKER_ARCH=amd64 make'"
-endif
