--- a/engines/graaljs/Makefile
+++ b/engines/graaljs/Makefile
@@ -4,5 +4,6 @@
 include ../../build/build.mk
 
 REV ?= graal-25.0.2
+SUPPORTED_ARCHS = amd64 arm64
 
 $(eval $(call build_engine,graaljs,Dockerfile))
