--- a/engines/malbrain/Makefile
+++ b/engines/malbrain/Makefile
@@ -4,10 +4,6 @@
 include ../../build/build.mk
 
 CONFORMANCE_SUITE = es[1-5]
+SUPPORTED_ARCHS = amd64
 
-ifeq ($(DOCKER_ARCH),amd64)
 $(eval $(call build_engine,malbrain,Dockerfile))
-else
-all:
-	@echo "malbrain: skipping, amd64 build only - build with 'DOCKER_ARCH=amd64 make'"
-endif
