--- a/engines/nova/Makefile
+++ b/engines/nova/Makefile
@@ -3,4 +3,7 @@
 
 include ../../build/build.mk
 
+# "USDT only supports x86_64 and ARM64 architectures"
+SUPPORTED_ARCHS = amd64 arm64
+
 $(eval $(call build_engine,nova,Dockerfile))
