--- a/engines/starlight/Makefile
+++ b/engines/starlight/Makefile
@@ -3,9 +3,6 @@
 
 include ../../build/build.mk
 
-ifeq ($(DOCKER_ARCH),amd64)
+SUPPORTED_ARCHS = amd64
+
 $(eval $(call build_engine,starlight,Dockerfile))
-else
-all:
-	@echo "starlight: skipping, arm64 build is broken - build with 'DOCKER_ARCH=amd64 make'"
-endif
