--- a/engines/wine/Makefile
+++ b/engines/wine/Makefile
@@ -3,9 +3,6 @@
 
 include ../../build/build.mk
 
-ifeq ($(DOCKER_ARCH),amd64)
+SUPPORTED_ARCHS = amd64
+
 $(eval $(call build_engine,wine,Dockerfile))
-else
-all:
-	@echo "wine: skipping, amd64 build only - build with 'DOCKER_ARCH=amd64 make'"
-endif
