--- a/engines/jscript/Makefile
+++ b/engines/jscript/Makefile
@@ -3,9 +3,6 @@
 
 include ../../build/build.mk
 
-ifeq ($(DOCKER_ARCH),amd64)
+SUPPORTED_ARCHS = amd64
+
 $(eval $(call build_engine,jscript,Dockerfile))
-else
-all:
-	@echo "jscript: skipping, amd64 build only - build with 'DOCKER_ARCH=amd64 make'"
-endif
