--- a/engines/bali/Dockerfile
+++ b/engines/bali/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/ferus-web/bali.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 RUN sed -i -e 's/ stable-updates$/ stable-updates unstable/' /etc/apt/sources.list.d/debian.sources
 RUN apt-get update -y && \
