--- a/engines/delskayn/Dockerfile
+++ b/engines/delskayn/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/DelSkayn/toyjs.git
 ARG REV=master-backup
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 RUN rustup toolchain install nightly-2022-04-01 && rustup override set nightly-2022-04-01
 RUN cargo build --release -p toyjs --bin cli
