--- a/engines/flathead/Dockerfile
+++ b/engines/flathead/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/ndreynolds/flathead.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 RUN apt-get update -y && apt-get install -y --no-install-recommends libreadline-dev
 RUN sed -i -e 's/yycolumn/yycolumn2/' src/lexer.l && \
