--- a/engines/iv-lv5/Dockerfile
+++ b/engines/iv-lv5/Dockerfile
@@ -12,8 +12,9 @@ ARG REPO=https://github.com/Constellation/iv.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 # Some bug on arm64 with gc causing infinite init loop, call LabelTable() singleton early.
 RUN sed -i 's/iv::lv5::railgun::ExecuteInGlobal/iv::lv5::railgun::VM::LabelTable(); iv::lv5::railgun::ExecuteInGlobal/' iv/lv5/main.cc
