--- a/engines/lebjs/Dockerfile
+++ b/engines/lebjs/Dockerfile
@@ -8,8 +8,9 @@ ARG REPO=https://github.com/LebsterFace/LebJS.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 RUN javac -d out $(find src -name "*.java") && \
     mkdir -p out/META-INF && \
