--- a/engines/porffor/Dockerfile
+++ b/engines/porffor/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/CanadaHonk/porffor.git
 ARG REV=main
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 #RUN npm install --prefix=/dist/porffor-dist "$REPO#$REV"
 RUN npm install --prefix=/dist/porffor-dist "$(npm pack --silent .)"
