--- a/engines/rpython-langjs/Dockerfile
+++ b/engines/rpython-langjs/Dockerfile
@@ -59,8 +59,9 @@ ARG REPO=https://github.com/progval/rpython-langjs.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 RUN sed -i 's/^_version_string = .*/_version_string = "1.0"/' js/builtins/js_global.py
 
