--- a/engines/tiny-js/Dockerfile
+++ b/engines/tiny-js/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/gfwilliams/tiny-js.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 RUN sed -i 's/\(TINYJS_LOOP_MAX_ITERATIONS\) = 8192;/\1 = 1000000000;/' TinyJS.h && \
     sed -i 's/CFLAGS=-c .*/CFLAGS=-c -O3/' Makefile && \
