--- a/engines/42tiny-js/Dockerfile
+++ b/engines/42tiny-js/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/gfwilliams/tiny-js.git
 ARG REV=42tiny-js
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 COPY engines/42tiny-js/42tiny-js.patch ./
 RUN git apply 42tiny-js.patch && make
