--- a/engines/boa/Dockerfile
+++ b/engines/boa/Dockerfile
@@ -8,8 +8,9 @@ ARG REPO=https://github.com/boa-dev/boa.git
 ARG REV=main
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 RUN apt-get update -y && apt-get install -y --no-install-recommends libssl-dev
 
