--- a/engines/carakan/Dockerfile
+++ b/engines/carakan/Dockerfile
@@ -8,8 +8,9 @@ ARG REPO=
 ARG REV=master
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 RUN sed -i 's/ stable-updates$/ stable-updates bullseye/' /etc/apt/sources.list.d/debian.sources && \
     apt-get update -y && \
