--- a/engines/castl/Dockerfile
+++ b/engines/castl/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/PaulBernier/castl.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 RUN apt-get update -y && \
     apt-get install -y luajit luarocks libpcre2-dev && \
