--- a/engines/echosoar/Dockerfile
+++ b/engines/echosoar/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/echosoar/jsi.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 COPY engines/echosoar/main.rs src/main.rs
 
