--- a/engines/escargot/Dockerfile
+++ b/engines/escargot/Dockerfile
@@ -8,8 +8,9 @@ ARG REPO=https://github.com/Samsung/escargot.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 RUN git submodule update --init third_party
 
 RUN apt-get update -y && apt-get install -y --no-install-recommends libicu-dev
