--- a/engines/jerryscript/Dockerfile
+++ b/engines/jerryscript/Dockerfile
@@ -8,8 +8,9 @@ ARG REPO=https://github.com/jerryscript-project/jerryscript.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 # Fix arm64 linux build
 RUN sed -i '/CMAKE_C_COMPILER/d' cmake/toolchain_linux_aarch64.cmake
