--- a/engines/jint/Dockerfile
+++ b/engines/jint/Dockerfile
@@ -8,8 +8,9 @@ ARG REPO=https://github.com/sebastienros/jint.git
 ARG REV=main
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 RUN dotnet publish Jint.Repl/Jint.Repl.csproj \
       -c Release \
