--- a/engines/js2py/Dockerfile
+++ b/engines/js2py/Dockerfile
@@ -8,8 +8,9 @@ ARG REPO=https://github.com/PiotrDabkowski/Js2Py.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
