--- a/engines/jsish/Dockerfile
+++ b/engines/jsish/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/pcmacdon/jsish.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 RUN CFLAGS="-O3" make -j1
 
