--- a/engines/jurassic/Dockerfile
+++ b/engines/jurassic/Dockerfile
@@ -8,8 +8,9 @@ ARG REPO=https://github.com/paulbartrum/jurassic.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 COPY engines/jurassic/jurassic.cs /src/REPL/Program.cs
 
