--- a/engines/mujs/Dockerfile
+++ b/engines/mujs/Dockerfile
@@ -9,7 +9,7 @@ ARG REPO=https://codeberg.org/ccxvii/mujs.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 RUN apt-get update -y && apt-get install -y --no-install-recommends libreadline-dev
 
