--- a/engines/quickjs-ng/Dockerfile
+++ b/engines/quickjs-ng/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/quickjs-ng/quickjs.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 RUN make
 
