--- a/engines/sablejs/Dockerfile
+++ b/engines/sablejs/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/sablejs/sablejs.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 RUN npm install
 RUN sed -i 's/.*spawn.sync.*/process.exit(0);/' cli.js && node ./cli.js cli.js
