--- a/engines/sandboxjs/Dockerfile
+++ b/engines/sandboxjs/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/nyariv/SandboxJS.git
 ARG REV=main
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 RUN npm install && npm install esbuild && npm run build
 
