--- a/engines/spidermonkey/Dockerfile
+++ b/engines/spidermonkey/Dockerfile
@@ -24,8 +24,9 @@ ARG REPO=https://github.com/mozilla-firefox/firefox.git
 ARG REV=release
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 # INTL=true: build with full internationalization support.
 ARG INTL=
