--- a/engines/ssrlive/Dockerfile
+++ b/engines/ssrlive/Dockerfile
@@ -8,8 +8,9 @@ ARG REPO=https://github.com/ssrlive/javascript.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 # REPL aborts on first run when ~/.js_repl_history does not exist
 RUN sed -i '/rl\.load_history/d' js/src/main.rs
