--- a/engines/starlingmonkey/Dockerfile
+++ b/engines/starlingmonkey/Dockerfile
@@ -11,8 +11,9 @@ ARG REPO=https://github.com/bytecodealliance/StarlingMonkey.git
 ARG REV=main
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 # Fix: WASI SDK release names use arm64, not aarch64
 RUN sed -i '1i string(REPLACE "aarch64" "arm64" WASI_SDK_ARCH ${HOST_CPU})' cmake/wasi-sdk.cmake && \
