--- a/engines/topaz/Dockerfile
+++ b/engines/topaz/Dockerfile
@@ -8,8 +8,9 @@ ARG REPO=https://github.com/koculu/Topaz.git
 ARG REV=main
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 COPY engines/topaz/topaz.cs /src/
 COPY engines/topaz/topaz_runner.csproj /src/topaz_runner.csproj
