--- a/engines/topchetoeu/Dockerfile
+++ b/engines/topchetoeu/Dockerfile
@@ -10,8 +10,9 @@ ARG REPO=https://github.com/ivankra/topchetoeu.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 RUN apt-get install -y --no-install-recommends nodejs npm
 RUN cd lib && npm install
