--- a/engines/wine/Dockerfile
+++ b/engines/wine/Dockerfile
@@ -12,8 +12,9 @@ ARG REPO=https://github.com/wine-mirror/wine.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 # Build 64-bit jscript.dll
 RUN mkdir -p build64 && cd build64 && \
