--- a/engines/xs/Dockerfile
+++ b/engines/xs/Dockerfile
@@ -11,8 +11,9 @@ ARG REPO=https://github.com/Moddable-OpenSource/moddable.git
 ARG REV=public
 
 WORKDIR /src
-RUN git clone --depth=1 --branch="$REV" "$REPO" . || \
-    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)
+RUN (git clone --depth=1 --branch="$REV" "$REPO" . || \
+    (git clone --depth=1 "$REPO" . && git fetch --depth=1 origin "$REV" && git checkout FETCH_HEAD)) && \
+    git rev-parse HEAD
 
 RUN apt-get update -y && apt-get install -y --no-install-recommends libncurses-dev
 RUN cd xs/makefiles/lin && MODDABLE=/src make -j release  # -O3
