--- a/engines/yaji/Dockerfile
+++ b/engines/yaji/Dockerfile
@@ -8,7 +8,7 @@ ARG REPO=https://github.com/neades/yaji-ecmascript-interpreter.git
 ARG REV=master
 
 WORKDIR /src
-RUN git clone "$REPO" . && git checkout "$REV"
+RUN git clone "$REPO" . && git checkout "$REV" && git rev-parse HEAD
 
 WORKDIR /src/yaji-ecmascript-interpreter
 
