--- a/engines/castl/Makefile
+++ b/engines/castl/Makefile
@@ -3,4 +3,7 @@
 
 include ../../build/build.mk
 
+# LuaJIT platforms
+SUPPORTED_ARCHS = amd64 arm64 arm 386 riscv64 s390x
+
 $(eval $(call build_engine,castl,Dockerfile))
