--- a/engines/chakracore/Makefile
+++ b/engines/chakracore/Makefile
@@ -4,9 +4,10 @@
 include ../../build/build.mk
 
 CONFORMANCE_BINARY = chakracore_intl
+SUPPORTED_ARCHS = amd64 arm64
+JIT_ARCHS = amd64
 
-# JIT is only supported on amd64
-ifeq ($(DOCKER_ARCH),amd64)
+ifeq ($(filter $(DOCKER_ARCH),$(JIT_ARCHS)),$(DOCKER_ARCH))
 $(eval $(call build_engine,chakracore,Dockerfile))
 $(eval $(call build_engine,chakracore_intl,Dockerfile,--build-arg INTL=true --build-arg JITLESS=true))
 $(eval $(call build_engine,chakracore_jitless,Dockerfile,--build-arg JITLESS=true))
