--- a/engines/dmdscript/Makefile
+++ b/engines/dmdscript/Makefile
@@ -3,4 +3,7 @@
 
 include ../../build/build.mk
 
+# Limited by platforms for ldc: https://packages.debian.org/sid/ldc
+SUPPORTED_ARCHS = amd64 arm64 armhf 386 loong64 ppc64le riscv64
+
 $(eval $(call build_engine,dmdscript,Dockerfile))
