--- a/engines/starlingmonkey/Makefile
+++ b/engines/starlingmonkey/Makefile
@@ -3,4 +3,7 @@
 
 include ../../build/build.mk
 
+# Build platforms for WASI SDK
+SUPPORTED_ARCHS = amd64 arm64
+
 $(eval $(call build_engine,starlingmonkey,Dockerfile))
