--- a/engines/hermes/Makefile
+++ b/engines/hermes/Makefile
@@ -4,6 +4,7 @@
 include ../../build/build.mk
 
 REV ?= main
+SUPPORTED_ARCHS = amd64 arm64
 
 $(eval $(call build_engine,hermes,Dockerfile))
 $(eval $(call build_engine,hermes_clang,Dockerfile,--build-arg BASE=jsz-clang))
